# sizegripitem

./: CMakeLists.txt  README  README.md  SizeGripItem.cpp  SizeGripItem.h  sizegripitem.cpp
demo/: CMakeLists.txt  MainWindow.cpp  demo.pro  main.cpp
